feat: Add user model and badrequest error class
